--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus, sequi sunt aliquid suscipit dicta doloribus!</p>
     <h1>nicw</h1>
+    <p>welcome</p>
 
     
     
