--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus, sequi sunt aliquid suscipit dicta doloribus!</p>
     <h1>nicw</h1>
     <p>welcome guys</p>
+    <p>learning</p>
+
 
 
     
